// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should NOT display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  />,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal, {"context":"coreHours","total":"1.1K"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value below 1000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal, {"context":"coreHours","total":"500"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value below 1000000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal, {"context":"coreHours","total":"900K"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply hosts inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem
         
        
      </React.Fragment>,
    },
    {
      "title": "12.53",
    },
    {
      "title": "20.04",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"coreHours"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"instanceHours"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "coreHours": {
      "title": "t(curiosity-inventory.header, {"context":"coreHours"})",
      "value": 12.53,
    },
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "instanceHours": {
      "title": "t(curiosity-inventory.header, {"context":"instanceHours"})",
      "value": 20.04,
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
  },
}
`;

exports[`Product OpenShift Dedicated config should apply hosts inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "0.00",
    },
    {
      "title": "0.00",
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"coreHours"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"instanceHours"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "coreHours": {
      "title": "t(curiosity-inventory.header, {"context":"coreHours"})",
      "value": null,
    },
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "instanceHours": {
      "title": "t(curiosity-inventory.header, {"context":"instanceHours"})",
      "value": null,
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": null,
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": null,
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
  },
}
`;
